# light-curve-classifier

./: .gitignore  README.md  config.py  pyproject.toml
notebooks/01_data_access/: 01_load_plasticc.ipynb
notebooks/02_eda/: 01_class_distribution.ipynb  02_light_curve_gallery.ipynb
notebooks/03_feature_engineering/: 01_statistical_features.ipynb  02_periodicity_features.ipynb
notebooks/04_modeling/: 01_rf_baseline.ipynb  02_lstm_classifier.ipynb  03_model_comparison.ipynb
notebooks/05_analysis/: 01_per_class_analysis.ipynb  02_misclassification_study.ipynb
src/: data.py  features.py  metrics.py  models.py  preprocessing.py  utils.py
