[project]
name = "light-curve-classifier"
version = "0.1.0"
description = "Variable star and transient classification from PLAsTiCC light curves"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "astropy>=5.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "ipykernel>=6.0.0",
    "pyarrow>=12.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
